WIP: Fix wrong response structure.
